--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,3 +1,23 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 991px;
+  margin: 2rem auto;
+  background: rgba(0, 0, 0, .3);
+  color: #fff;
+  padding: 2rem;
+  height: 100%;
+  width: 100%;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 9px;
 }
