--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -4,7 +4,7 @@
   justify-content: center;
   max-width: 991px;
   margin: 2rem auto;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.3);
   color: #fff;
   padding: 2rem;
   height: 100%;
@@ -16,8 +16,9 @@ table {
   width: 100%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
+td,
+th {
+  border: 1px solid #ddd;
   text-align: left;
   padding: 9px;
 }
