--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   max-width: 991px;
   margin: 2rem auto;
+  /* background: #fff; */
   background: rgba(0, 0, 0, 0.3);
   color: #fff;
   padding: 2rem;
@@ -25,19 +26,29 @@ th {
 
 form {
   width: 100%;
+  display: flex;
 }
 
 input[type=text] {
   width: 14rem;
-  padding: 0.4rem;
-  margin: 0.7rem 0;
+  padding: 0.44rem;
+  margin: 0.7rem 1rem 1rem 0;
 }
 
-.submit,
+.submit {
+  margin: 0.7rem 1rem 1rem 0;
+  padding: 0.5rem;
+}
+
 select {
   width: 15rem;
-  padding: 0.4rem;
-  margin: 0.7rem 0;
+  padding: 0.5rem;
+  margin: 0.7rem 1rem 1rem 0;
+  cursor: inherit;
+  line-height: inherit;
+  border: none;
+  font-size: inherit;
+  text-indent: 5px;
 }
 
 .submit:hover {
