--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
