--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,28 +1,13 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 991px;
-  margin: 2rem auto;
-
-  /* background: #fff; */
-  background: rgba(0, 0, 0, 0.3);
-  color: #fff;
+  width: 1400px;
+  min-height: 1097px;
+  margin: 3rem auto;
+  /* margin: 0 40px 65px 0; */
+  /* padding: 0 0 794px; */
+  border-radius: 4px;
+  box-shadow: 0 0 60px 0 var(--black-5);
+  background-color: #fafafa;
   padding: 2rem;
-  height: 100%;
-  width: 100%;
-}
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td,
-th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 9px;
 }
 
 form {
