--- a/src/assets/book.module.css
+++ b/src/assets/book.module.css
@@ -1,19 +1,66 @@
+:root {
+	--medium-blue: #307bbe;
+    --dodger-blue: #379cf6;
+    --white-two: #ffffff;
+    --azure: #0290ff;
+}
+
 .lessonPanel {
-  display: flex;
-  justify-content: space-between;
-  background: #fff;
-  color: #000;
-  margin: 0.7rem 0;
-  padding: 1rem;
-  border-radius: 0.5rem;
+	display: flex;
+	justify-content: space-between;
+	background: #fff;
+	color: #000;
+	margin: 1rem 0;
+	padding: 1rem;
+	border-radius: 1rem;
+	border: solid 1px #e8e8e8;
 }
 
 .actionBtn {
-  color: blue;
-  border: none;
-  background: #fff;
+	color: var(--medium-blue);
+	border: none;
+	background: #fff;
 }
 
 .actionBtn:hover {
-  cursor: pointer;
+	cursor: pointer;
+}
+
+.currentChapter {
+	margin: 1px 58px 0 59px;
+	opacity: 0.5;
+	font-family: 'Roboto', 'Helvetica Neue';
+	font-size: 13px;
+	font-weight: 300;
+	font-stretch: normal;
+	font-style: none;
+	letter-spacing: normal;
+	color: #121212;
+}
+
+.Overal2 {
+    width: 40px;
+    height: 40px;
+    border: 10px solid #f3f3f3;
+    border-radius: 50%;
+    border-right: 10px solid var(--medium-blue);
+    border-bottom: 10px solid var(--medium-blue);
+    margin: 1.2rem .7rem;
+}
+
+.button {
+    width: 184px;
+    height: 33px;
+    margin: 1rem;
+    padding: 7px 19px 8px 22px;
+    border-radius: 5px;
+    background-color: var(--azure);
+    border: none;
+    color: var(--white-two)
+}
+
+.progressReport {
+	display: flex;
+	justify-content: space-between;
+    align-items: center;
 }
