--- a/src/assets/book.module.css
+++ b/src/assets/book.module.css
@@ -1,8 +1,9 @@
 :root {
 	--medium-blue: #307bbe;
-    --dodger-blue: #379cf6;
-    --white-two: #ffffff;
-    --azure: #0290ff;
+	--dodger-blue: #379cf6;
+	--white-two: #ffffff;
+	--azure: #0290ff;
+    --black-two: #000;
 }
 
 .lessonPanel {
@@ -39,28 +40,61 @@
 }
 
 .Overal2 {
-    width: 40px;
-    height: 40px;
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-right: 10px solid var(--medium-blue);
-    border-bottom: 10px solid var(--medium-blue);
-    margin: 1.2rem .7rem;
+	width: 40px;
+	height: 40px;
+	border: 10px solid #f3f3f3;
+	border-radius: 50%;
+	border-right: 10px solid var(--medium-blue);
+	border-bottom: 10px solid var(--medium-blue);
+	margin: 1.2rem 0.7rem;
 }
 
 .button {
-    width: 184px;
-    height: 33px;
-    margin: 1rem;
-    padding: 7px 19px 8px 22px;
-    border-radius: 5px;
-    background-color: var(--azure);
-    border: none;
-    color: var(--white-two)
+	width: 184px;
+	height: 33px;
+	margin: 1rem;
+	padding: 7px 19px 8px 22px;
+	border-radius: 5px;
+	background-color: var(--azure);
+	border: none;
+	color: var(--white-two);
 }
 
 .progressReport {
 	display: flex;
 	justify-content: space-between;
-    align-items: center;
+	align-items: center;
+}
+
+.currentLesson {
+    width: 212px;
+    height: 21px;
+    padding: 0 2rem;
+}
+
+.percentageComplete {
+    margin: 1px 92px 0 11px;
+    font-family: Montserrat;
+    font-size: 32px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: var(--black-two);
+}
+
+.complete {
+    width: 80px;
+    height: 18px;
+    margin: 7px 79px 12px 12px;
+    opacity: 0.5;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: var(--black-two);
 }
