--- a/src/assets/bookslist.module.css
+++ b/src/assets/bookslist.module.css
@@ -17,3 +17,10 @@ nav {
 	letter-spacing: normal;
 	color: var(--azure);
 }
+
+.selectCategory {
+    color: var(--azure);
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
