Run stylelint error guide & refactor css styles

--- a/src/assets/book.module.css
+++ b/src/assets/book.module.css
@@ -86,7 +86,7 @@
 .currentChapter {
   margin: 1px 58px 0 59px;
   opacity: 0.5;
-  font-family: 'Roboto', 'Helvetica Neue';
+  font-family: RobotoSlab, serif;
   font-size: 13px;
   font-weight: 300;
   font-stretch: normal;
